Fix spacing issue for date for lessondates

--- a/frontend/src/components/LessonDatesIndexItem/LessonDatesIndexItem.css
+++ b/frontend/src/components/LessonDatesIndexItem/LessonDatesIndexItem.css
@@ -45,7 +45,7 @@
 }
 
 .locShowLessonDateIdxItmTimeCol {
-  width: 70px;
+  width: 90px;
   height: 50px;
   margin-right: 12px;
   font-size: .875rem;
